# LingCe

./: .gitignore  CHANGELOG.md  LICENSE  OPTIMIZATION.md  README.md  V0.0.6_UPGRADE_PLAN.md  app.py  pyproject.toml  requirements.txt  secure_build.py
core/: __init__.py  ai_presets.py  config.py  default_settings.py  models.py  utils.py
data/: user_data.example.json  user_data.json  题库.json
import_question_samples_cn/: cn_questions.csv  cn_questions.docx  cn_questions.md  cn_questions.txt  cn_questions.xlsx  source_questions_cn.json
scripts/: create_cn_import_samples.py  extract_exam_questions.py  release_check.py
services/: __init__.py  ai_service.py  document_import_service.py  exam_db.py  exam_service.py  file_service.py  question_bank_builder.py  question_service.py  settings_service.py  user_data_service.py
tests/: __init__.py  test_models.py  test_services.py  test_utils.py
ui/: __init__.py  ai_review_window.py  app_icon.py  components.py  edit_functions.py  exam_mode.py  exam_stats.py  main_window.py  practice_mode.py  question_bank_builder_window.py  settings_window.py  stats_chart.py  widgets.py
